# c-game

./: .gitignore  CMakeLists.txt
src/: main.cpp
